kubernetes/itinerary-service/itinerary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itinerary-service
  labels:
    app: itinerary-service
    service: itinerary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: itinerary-service
  template:
    metadata:
      labels:
        app: itinerary-service
        service: itinerary
    spec:
      serviceAccountName: itinerary-service-sa
      containers:
        - name: itinerary-service
          image: europe-west1-docker.pkg.dev/graphite-plane-474510-s9/docker-repo/travel-backend:2.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          startupProbe:
            httpGet:
              path: /q/health/started
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
