kubernetes/itinerary-service/itinerary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: itinerary-service
  labels:
    app: itinerary-service
    service: itinerary
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
  selector:
    app: itinerary-service
